<resources>
    <string name="app_name" translatable="false">BikeGoals</string>
    <string name="app_save_file" translatable="false">saved_file</string>
    <string name="app_user_name" translatable="false">saved_user</string>
    <string name="title_activity_login_screen">Login screen</string>
    <string name="login_view_username">Enter your username</string>
    <string name="login_view_password">Enter your password</string>
    <string name="login_button_login">LOG IN</string>
    <string name="login_button_password">REGISTER</string>
    <string name="login_text_incorrect">Incorrect password.</string>
    <string name="login_text_found">Your account was found! Because this is the first time you sign in on this device, please sign in again.</string>
    <string name="login_text_exist">Username does not exist.</string>
    <string name="login_text_needed">Username is needed.</string>
    <string name="login_text_wrong">It appears that something went wrong.</string>
    <string name="title_activity_register">Register</string>
    <string name="register_view_username">Enter your username *</string>
    <string name="register_view_password">Enter your password *</string>
    <string name="register_view_country">Enter your country</string>
    <string name="register_view_city">Enter your city</string>
    <string name="register_view_firstname">Enter your first name</string>
    <string name="register_view_lastname">Enter your last name</string>
    <string name="register_button_register">Register!</string>
    <string name="register_text_exists">Username already exists.</string>
    <string name="register_text_pass_needed">Password is needed.</string>
    <string name="register_text_user_needed">Username is needed.</string>
    <string name="register_text_invalid_characters">Only numbers and letters</string>
    <string name="register_text_too_long">Maximum 30 characters</string>
    <string name="register_text_belgium">Belgium</string>
    <string name="register_text_germany">Germany</string>
    <string name="register_text_netherlands">Netherlands</string>
    <string name="register_text_great_britain">Great-Britain</string>
    <string name="register_text_france">France</string>
    <string name="register_text_luxembourg">Luxembourg</string>
    <string name="register_text_other">Other</string>
    <string-array name="countrylist">
        <item>Belgium</item>
        <item>Netherlands</item>
        <item>Great-Britain</item>
        <item>Germany</item>
        <item>France</item>
        <item>Luxembourg</item>
        <item>Other</item>
    </string-array>
    <string name="title_activity_homescreen" translatable="false">Bikegoals</string>
    <string name="home_button_ride">Ride mode</string>
    <string name="home_button_optional">Milestones</string>
    <string name="home_button_ranking">Ranking</string>
    <string name="home_button_challenges">Challenges</string>
    <string name="home_button_map">Map</string>
    <string name="home_button_settings">Settings</string>
    <string name="home_button_statistics">Personal statistics</string>
    <string name="home_button_preferences">Personal preferences</string>
    <string name="home_button_friends">Friends</string>
    <string name="home_button_logout">Log out</string>
    <string name="title_activity_challenges">Challenges</string>
    <string name="challenges_view_title">Challenges</string>
    <string name="challenges_view_1">Get an acceleration of 3 m/s²</string>
    <string name="challenges_view_2">Get speed over 20 km/h</string>
    <string name="challenges_view_3">Continue driving north for 1 km</string>
    <string name="challenges_button_start">Start challenge</string>
    <string name="challenges_button_new_challenge">new challenge</string>
    <string name="challenges_time">Time:</string>
    <string name="challenges_start_temp">Starting temperature:</string>
    <string name="challenges_curr_temp">Current temperature: </string>
    <string name="challenges_curr_acceleration">Current acceleration:</string>
    <string name="challenges_average_acceleration">Average acceleration: </string>
    <string name="challenges_distance_travelled">Distance travelled:</string>
    <string name="challenges_start_point">Distance to starting point:</string>
    <string name="challenges_curr_height_diff">Current height difference:</string>
    <string name="challenges_winddirection">Wind direction:</string>
    <string name="challenges_deviation">Deviation:</string>
    <string name="challenges_huidige_versnelling">Current acceleration</string>
    <string name="challenges_points">points!</string>
    <string name="challenges_expl_keepspeed1">Keep a speed of</string>
    <string name="challenges_expl_keepspeed2">km/h for 30 seconds</string>
    <string name="challenges_expl_keepacc1">Keep an acceleration of</string>
    <string name="challenges_expl_keepacc2"> m/s² for 5 seconds</string>
    <string name="challenges_expl_tempdiff1">Find a place with a temperature difference of</string>
    <string name="challenges_expl_averagespeed">This ride (at least five minutes long), get an average speed of</string>
    <string name="challenges_expl_averageacc">This ride (at least five minutes long), get an average acceleration of</string>
    <string name="challenges_expl_drivecircle">Drive a circle of at least</string>
    <string name="challenges_expl_getacc">Get an acceleration of</string>
    <string name="challenges_expl_altitudedifference1">Climb</string>
    <string name="challenges_expl_altitudedifference2">m</string>
    <string name="challenges_expl_getspeed">Get a speed of</string>
    <string name="challenges_expl_drive">Drive</string>
    <string name="challenges_expl_drivedirection">km to the</string>
    <string name="challenges_unit_temperature" translatable="false">°C</string>
    <string name="challenges_unit_velocity" translatable="false"> km/h</string>
    <string name="challenges_unit_acceleration" translatable="false"> m/s²</string>
    <string name="challenges_unit_distance" translatable="false">km</string>
    <string name="title_activity_record_acceleration">recordAcceleration</string>
    <string name="acceleration_button_start">Start</string>
    <string name="acceleration_button_stop">Stop</string>
    <string name="acceleration_acceleration">Acceleration: </string>
    <string name="acceleration_result_text">You did it!</string>
    <string name="title_activity_record_speed">RecordSpeed</string>
    <string name="speed_speed">Speed: </string>
    <string name="speed_succes">Succes!</string>
    <string name="speed_button_start">Start</string>
    <string name="speed_button_stop">Stop</string>
    <string name="title_activity_record_magnetic_field">RecordMagneticField</string>
    <string name="magnetic_winddirections">Winddirections: </string>
    <string name="magnetic_north">North</string>
    <string name="magnetic_east">East</string>
    <string name="magnetic_south">South</string>
    <string name="magnetic_west">West</string>
    <string name="point_1">1 Point.</string>
    <string name="point_5">5 Points.</string>
    <string name="point_10">10 Points.</string>
    <string name="point_50">50 Points.</string>
    <string name="point_100">100 Points.</string>
    <string name="point_200">200 Points.</string>
    <string name="point_300">300 Points.</string>
    <string name="point_400">400 Points.</string>
    <string name="point_500">500 Points.</string>
    <string name="point_600">600 Points.</string>
    <string name="point_700">700 Points.</string>
    <string name="point_1000">1000 Points.</string>
    <string name="point_2000">2000 Points.</string>
    <string name="point_2400">2400 Points.</string>
    <string name="point_2500">2400 Points.</string>
    <string name="point_4800">4800 Points.</string>
    <string name="point_5000">5000 Points.</string>
    <string name="point_8000">8000 Points.</string>
    <string name="point_10000">10000 Points.</string>
    <string name="point_20000">20000 Points.</string>
    <string name="point_40000">40000 Points.</string>
    <string name="point_100000">100000 Points.</string>
    <string name="point_120000">120000 Points.</string>
    <string name="point_168000">168000 Points.</string>
    <string name="point_336000">336000 Points.</string>
    <string name="point_400000">400000 Points.</string>
    <string name="point_600000">600000 Points.</string>
    <string name="point_744000">744000 Points.</string>
    <string name="point_1000000">1000000 Points.</string>
    <string name="point_2400000">2400000 Points.</string>
    <string name="point_100000000">10000000 Points.</string>
    <string name="title_activity_achievements">Achievements</string>
    <string name="achievement_1">Drive 1 kilometer.</string>
    <string name="achievement_2">Drive 5 kilometer.</string>
    <string name="achievement_3">Drive 10 kilometer.</string>
    <string name="achievement_4">Drive 50 kilometer.</string>
    <string name="achievement_5">Drive 100 kilometer.</string>
    <string name="achievement_6">Drive 250 kilometer.</string>
    <string name="achievement_7">Drive 500 kilometer.</string>
    <string name="achievement_8">Drive 1000 kilometer.</string>
    <string name="achievement_9">Drive 5000 kilometer.</string>
    <string name="achievement_10">Reach a speed of 30 km/h.</string>
    <string name="achievement_11">Reach a speed of 35 km/h.</string>
    <string name="achievement_12">Reach a speed of 40 km/h.</string>
    <string name="achievement_13">Reach a speed of 45 km/h.</string>
    <string name="achievement_14">Reach a speed of 50 km/h.</string>
    <string name="achievement_15">Win 1 challenge.</string>
    <string name="achievement_16">Win 5 challenges.</string>
    <string name="achievement_17">Win 10 challenges.</string>
    <string name="achievement_18">Win 50 challenges.</string>
    <string name="achievement_19">Win 200 challenges.</string>
    <string name="achievement_20">Win 500 challenges.</string>
    <string name="achievement_21">Use the app for 1 day.</string>
    <string name="achievement_22">Use the app for 2 days.</string>
    <string name="achievement_23">Use the app for 5 days.</string>
    <string name="achievement_24">Use the app for 7 days.</string>
    <string name="achievement_25">Use the app for 14 days.</string>
    <string name="achievement_26">Use the app for 31 days.</string>
    <string name="achievement_27">Use the app for 100 days.</string>
    <string name="achievement_28">Start the app.</string>
    <string name="achievement_29">All milestones achieved.</string>
    <string name="achievement_30">Height difference of 10 meter.</string>
    <string name="achievement_31">Height difference of 25 meter.</string>
    <string name="achievement_32">Height difference of 50 meter.</string>
    <string name="achievement_33">Height difference of 100 meter.</string>
    <string name="title_activity_wifi_scanner">wifiScanner</string>
    <string name="wifi_nb_found">Number of Wifi-hotspots found: </string>
    <string name="title_activity_ride">RideActivity</string>
    <string name="people_root_current_challenge">Current challenge.</string>
    <string name="people_root_type">Type: </string>
    <string name="people_root_time">Time left: </string>
    <string name="people_root_button_drive">DRIVE</string>
    <string name="preferences_text_local">Remove the user that is currently logged in from this device.\n
    Your achievements and points will remain saved on the server.</string>
    <string name="preferences_text_all">Remove the user that is currently logged in from this device and our databases.\n
    All your progress on achievements and points will be removed forever.\n
    Forever is a very long time!</string>
    <string name="preferences_button_local">DELETE USER LOCAL</string>
    <string name="preferences_button_all">DELETE USER COMPLETELY</string>
</resources>