<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
        android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        tools:context="com.mushroom.cwb1.mushroom2.Register">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/register_view_username"
            android:id="@+id/text_register_username"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="10dp" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:singleLine="true"
            android:id="@+id/editText_register_username"
            android:layout_marginTop="5dp"
            android:layout_below="@+id/text_register_username"
            android:layout_centerHorizontal="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/register_view_password"
            android:id="@+id/register_password"
            android:layout_below="@+id/editText_register_username"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:singleLine="true"
            android:id="@+id/editText_register_password"
            android:layout_marginTop="5dp"
            android:layout_below="@+id/register_password"
            android:layout_centerHorizontal="true"
            android:inputType="textPassword"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/register_view_country"
            android:id="@+id/register_country"
            android:layout_below="@+id/editText_register_password"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:singleLine="true"
            android:id="@+id/editText_register_country"
            android:layout_marginTop="5dp"
            android:layout_below="@+id/register_country"
            android:layout_centerHorizontal="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/register_view_city"
            android:id="@+id/register_city"
            android:layout_below="@+id/editText_register_country"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp" />


        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:singleLine="true"
            android:id="@+id/editText_register_city"
            android:layout_marginTop="5dp"
            android:layout_below="@+id/register_city"
            android:layout_centerHorizontal="true" />

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/register_button_register"
            android:id="@+id/registeract_register"
            android:layout_below="@+id/editText_register_city"
            android:layout_centerHorizontal="true"
            android:background="@color/orangeApp"/>

    </RelativeLayout>

</ScrollView>
